--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <!--Dark Mode-->
             <div class="mode"></div>
-            <div class="moon-sun" id="toggle">
+            <div class="moon-sun" id="toggle-switch">
                 <i class="fa fa-moon" id="moon"></i>
                 <i class="fa fa-sun" id="sun"></i>
             </div>
@@ -54,7 +54,7 @@
             <section class="featured-box" id="home">
                 <div class="featured-text">
                     <div class="hello">
-                        <p>Hello I'm</p>
+                        <p>Hello I'm a</p>
                     </div>
                     <div class="featured-name">
                         <span class="typedText"></span>
@@ -230,5 +230,9 @@
             </div>
         </footer>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
+    <script defer src="js/script.js"></script>
 </body>
 </html>
